--- a/reddit.css
+++ b/reddit.css
@@ -14,13 +14,15 @@ body{
 	z-index: 1;
 }
 
+.pictures {
+	-moz-column-count: 3;
+	-webkit-column-count: 3;
+	column-count: 3;
+}
+
 .image{
-	width: 30%;
-	min-height: 120px;
 	padding: 10px;
 	position: relative;
-	z-index: 1;
-	float: left;
 }
 
 .title{
